--- a/blog/_posts/2022-02-09-cmd-34.mdx
+++ b/blog/_posts/2022-02-09-cmd-34.mdx
@@ -180,7 +180,7 @@ constat que moi : ce groupe est fait pour le live. Il n'y a qu'à prêter
 attention à la façon dont Squid étire ses morceaux, comment il utilise l'espace
 temps pour porter le public dans une autre dimension. 
 
-Il ne nous reste quà prier pour voir le nom du groupe apparaitre sournoisement
+Il ne nous reste qu'à prier pour voir le nom du groupe apparaitre sournoisement
 dans la programation de Stéréolux. 
 
 https://squiduk.bandcamp.com/track/pamphlets
