--- a/blog/_posts/2022-02-09-cmd-34.mdx
+++ b/blog/_posts/2022-02-09-cmd-34.mdx
@@ -174,7 +174,7 @@ performance live chez KEXP](https://www.youtube.com/watch?v=g-JWNggMB58). Je
 vous la conseille vivement.
 
 Leur album Bright Green Field est déjà super. Ambiance Post Punk comme seuls les
-groupe anglais ou presque savent le faire. Version ça débordante d'énergie qui
+groupe anglais ou presque savent le faire. Version ça déborde d'énergie et ça 
 part dans tous le sens. Cela dit après avoi vu le live, vous ferez le même
 constat que moi : ce groupe est fait pour le live. Il n'y a qu'à prêter
 attention à la façon dont Squid étire ses morceaux, comment il utilise l'espace
