--- a/blog/_posts/2022-02-09-cmd-34.mdx
+++ b/blog/_posts/2022-02-09-cmd-34.mdx
@@ -40,7 +40,7 @@ Synth Pop, Post Rock, Post Punk.
 
 Étant dans une grande période Ambient, il me faut vous en partager un petit
 peu par ici. Je dois dire que je ne sais pas si cela plaît trop. J'attends
-encore de croiser une personne qui me dit être une fan acconditionnée du genre.
+encore de croiser une personne qui me dit être une fan inconditionnée du genre.
 
 Pour vous convaincre, je convoque ici un des groupes experts du genre. Boards Of
 Canada, signé chez Warp, le Graal des labels de musique électronique. C'est
