--- a/blog/_posts/2022-02-09-cmd-34.mdx
+++ b/blog/_posts/2022-02-09-cmd-34.mdx
@@ -78,7 +78,7 @@ Je vous avais parlé de Kae Tempest lors du
 [`cmd#11`](https://cmd.wuips.com/post/2021-09-03-cmd-11) (le `cmd` avec la photo
 de Arti le corgi tout mignon). Iel nous avait jubjugué avec son morceau
 "Firesmoke", comme un long poème accompagné d'une prod parfaitement dosé pour ce
-genre de Rap qu'on appelle précisement le Spoken World.
+genre de Rap qu'on appelle précisément le Spoken World.
 
 Iel est de retour ici avec "Salt Coast", issu de son prochain album "The Line Is
 A Curve". Même recette. Même qualité.
@@ -92,10 +92,10 @@ https://www.youtube.com/watch?v=RFwiGetII9w
 ### Post Rock - Album : Ants From Up There (2022)
 
 Les anglais de Black Country, New Road sont de retour après leur premier album
-très aclamé "For The First Time", sorti chez Ninja Tune, la référence.
-Décidement on fait la fine bouche sur `cmd` aujourd'hui.
+très acclamé "For The First Time", sorti chez Ninja Tune, la référence.
+Décidément on fait la fine bouche sur `cmd` aujourd'hui.
 
-Problème, quatres jours avant la sortie de leur nouveau Ants From Up There, le
+Problème, quatre jours avant la sortie de leur nouveau Ants From Up There, le
 chanteur Isaac Wood annonce son départ. On profite donc de "Ants From Up There"
 car c'est le second et dernier album du groupe dans leur configuration initiale.
 
