--- a/blog/_posts/2022-02-09-cmd-34.mdx
+++ b/blog/_posts/2022-02-09-cmd-34.mdx
@@ -77,7 +77,7 @@ https://birocratic.bandcamp.com/track/wrapped-up
 Je vous avais parlé de Kae Tempest lors du
 [`cmd#11`](https://cmd.wuips.com/post/2021-09-03-cmd-11) (le `cmd` avec la photo
 de Arti le corgi tout mignon). Iel nous avait jubjugué avec son morceau
-"Firesmoke", comme un long poème accompagné d'une prod parfaitement dosé pour ce
+"Firesmoke", comme un long poème accompagné d'une prod parfaitement dosée pour ce
 genre de Rap qu'on appelle précisément le Spoken World.
 
 Iel est de retour ici avec "Salt Coast", issu de son prochain album "The Line Is
