--- a/blog/_posts/2022-02-09-cmd-34.mdx
+++ b/blog/_posts/2022-02-09-cmd-34.mdx
@@ -139,7 +139,7 @@ https://www.youtube.com/watch?v=BD1w72dNVgA
 
 ### Synth Pop - Album : Solid State Survivor (1979)
 
-Passage par le Japon avec les cracks de la Synthn Pop, les fameux Yellow Magic
+Passage par le Japon avec les cracks de la Synth Pop, les fameux Yellow Magic
 Orchestra (YMO pour les intimes).
 
 Toujours un mélange extrèment bien dosé entre des incrédients funky, des
