--- a/blog/_posts/2022-02-09-cmd-34.mdx
+++ b/blog/_posts/2022-02-09-cmd-34.mdx
@@ -142,7 +142,7 @@ https://www.youtube.com/watch?v=BD1w72dNVgA
 Passage par le Japon avec les cracks de la Synth Pop, les fameux Yellow Magic
 Orchestra (YMO pour les intimes).
 
-Toujours un mélange extrèment bien dosé entre des incrédients funky, des
+Toujours un mélange extrêment bien dosé entre des ingrédients funky, des
 morceaux très expérimentaux, des petites doses de fantaisie. Ça met de bonne
 humeur.
 
