--- a/blog/_posts/2022-02-09-cmd-34.mdx
+++ b/blog/_posts/2022-02-09-cmd-34.mdx
@@ -158,8 +158,8 @@ Je prévenais de l'absence de House en intro. Finalement en voici un petit peu.
 C'est l'exception qui confirme la règle comme on dit.
 
 Est-ce vraiment de la House pure ? Pas vraiment. Les connaisseurs et
-connaisseuses nous parlerons peut-être de Broken Beat. N'étant pas spécialistes
-de la nomanclature musicale, nous nous contentrons de profiter du morceau.
+connaisseuses nous parleront peut-être de Broken Beat. N'étant pas spécialistes
+de la nomenclature musicale, nous nous contenterons de profiter du morceau.
 
 https://www.youtube.com/watch?v=Kp9b4NZFSQU
 
