--- a/blog/_posts/2022-02-09-cmd-34.mdx
+++ b/blog/_posts/2022-02-09-cmd-34.mdx
@@ -175,13 +175,13 @@ vous la conseille vivement.
 
 Leur album Bright Green Field est déjà super. Ambiance Post Punk comme seuls les
 groupe anglais ou presque savent le faire. Version ça déborde d'énergie et ça 
-part dans tous le sens. Cela dit après avoi vu le live, vous ferez le même
+part dans tous le sens. Cela dit après avoir vu le live, vous ferez le même
 constat que moi : ce groupe est fait pour la scène. Il n'y a qu'à prêter
 attention à la façon dont Squid étire ses morceaux, comment il utilise l'espace
 temps pour porter le public dans une autre dimension. 
 
 Il ne nous reste qu'à prier pour voir le nom du groupe apparaitre sournoisement
-dans la programation de Stéréolux. 
+dans la programmation de Stéréolux. 
 
 https://squiduk.bandcamp.com/track/pamphlets
 
@@ -191,11 +191,11 @@ https://squiduk.bandcamp.com/track/pamphlets
 
 ### Alternative Rock - Album : The Besnard Lakes Are The Dark Horse (2007)
 
-Clap de fin pour ce vendredi. Nous teminerons ce `cmd` comme les bonnes séries
+Clap de fin pour ce vendredi. Nous terminerons ce `cmd` comme les bonnes séries
 se terminent. Un au-revoir planant qui place toute place à l'interprétation et
 au mystère.
 
-Retour à la vie après cette petite promenate musicale. Le monde ne s'est
+Retour à la vie après cette petite promenade musicale. Le monde ne s'est
 visiblement pas arrêté pour nous. Qu'à cela ne tienne. Nous ne lui devons rien.
 
 https://thebesnardlakes.bandcamp.com/track/for-agent-13
