--- a/blog/_posts/2022-02-18-cmd-35.mdx
+++ b/blog/_posts/2022-02-18-cmd-35.mdx
@@ -71,7 +71,7 @@ https://www.youtube.com/watch?v=QBcqFqS7llE
 
 ### Indie Rock - Album : Django Django (2011)
 
-Ces derniers jours et semaines m'ayant donnés comme l'impression d'évoluer à
+Ces derniers jours et semaines m'ayant donné comme l'impression d'évoluer à
 l'intérieure d'une machine à laver en programme essorage maximal, je suis
 incapable de dire comment j'ai trouvé la moitié des morceaux découverts cette
 semaine.
