--- a/blog/_posts/2022-02-18-cmd-35.mdx
+++ b/blog/_posts/2022-02-18-cmd-35.mdx
@@ -122,7 +122,7 @@ bonifier avec l'âge. Elle devient plus expérimentale et plus lente. Et cela ne
 va pas pour nous déplaire.
 
 Écoutons "Bane" ici. Le morceau parlera aux fans des grandes heures et nous
-offre quelques petites moments __à la Supertramp__. J'ai longtemps hésité avec
+offre quelques petites moments _à la Supertramp_. J'ai longtemps hésité avec
 ["Walk a Mile"](https://www.youtube.com/watch?v=QE1PraED6Pk), plus expérimental
 et plus représentatif de la posture de l'album, que vous pouvez aller écouter
 comme des grandes personnes que vous êtes.
