--- a/blog/_posts/2022-02-18-cmd-35.mdx
+++ b/blog/_posts/2022-02-18-cmd-35.mdx
@@ -147,12 +147,12 @@ Si je ne conseille peut-être pas l'album entier, j'ai bien aimé Partout, dont 
 texte est surement le plus réussi des morceaux. On a pas perdu le côté
 psychédélique du personnage :
 
-> J’me cherche alors que j’suis partout
-> Je vais nulle part j’me sens porté
-> Dans la radio de mon esprit
+> J’me cherche alors que j’suis partout<br />
+> Je vais nulle part j’me sens porté<br />
+> Dans la radio de mon esprit<br />
 
-> Mes textes sont concept, mais le psy est confiant
-> Décidément, “conscient” est le titre qui me convient
+> Mes textes sont concept, mais le psy est confiant<br />
+> Décidément, “conscient” est le titre qui me convient<br />
 
 https://jacques.bandcamp.com/track/partout
 
