--- a/blog/_posts/2022-02-18-cmd-35.mdx
+++ b/blog/_posts/2022-02-18-cmd-35.mdx
@@ -222,7 +222,7 @@ morceaux.
 
 C'est N'to qui prend les commandes pour clotûrer avec Note Blanche. Morceau
 délicat et dans la patte très reconnaissable de l'artiste que je conseille
-d'écouter avec modération. On peut vite faire une overdose et après s'en est
+d'écouter avec modération. On peut vite faire une overdose et après c'en est
 terminé.
 
 https://www.youtube.com/watch?v=6fpQtKP92BI
