--- a/blog/_posts/2022-02-25-cmd-36.mdx
+++ b/blog/_posts/2022-02-25-cmd-36.mdx
@@ -6,7 +6,7 @@ export const metadata = Metadata.createCmd({
   type: 'cmd',
   title: 'cmd #36',
   image: {
-    src: '/images/cmd-36.jpeg',
+    src: '/images/cmd-36.png',
     alt: "Un coin de pièce peint en noir. Une petite fenêtre ouverte. Un produit anti odeurs.",
     caption: "coin noir"
   }
