--- a/blog/_posts/2022-02-25-cmd-36.mdx
+++ b/blog/_posts/2022-02-25-cmd-36.mdx
@@ -98,8 +98,7 @@ https://sallyshapiro.bandcamp.com/track/forget-about-you-2
 
 ## Yello - Great Mission / You Gotta Say Yes To Another Excess
 
-### Synth Pop / Experimental - Album : You Gotta Say Yes To Another Excess
-(1984)
+### Synth Pop / Experimental - Album : You Gotta Say Yes To Another Excess (1984)
 
 J'ai passé la semaine à préparer le terrain chez certains et certaines : "il y
 aura un son un peu bizarre dans le prochain `cmd`". On y est. Les esprits sont
