--- a/blog/_posts/2022-04-01-cmd-41.mdx
+++ b/blog/_posts/2022-04-01-cmd-41.mdx
@@ -176,7 +176,7 @@ https://xxlabrecords.bandcamp.com/track/shame-stare
 
 
 
-### Sexteto Electrónico Moderno - I Say a Little Prayer
+## Sexteto Electrónico Moderno - I Say a Little Prayer
 
 ### Easy Listening (1969)
 
