--- a/blog/_posts/2022-04-08-cmd-42.mdx
+++ b/blog/_posts/2022-04-08-cmd-42.mdx
@@ -39,9 +39,11 @@ Arnaud, ayant perdu tout usage des verbes après avoir gravit [la
 Rhune](https://fr.wikipedia.org/wiki/La_Rhune) hier, nous écrit quelques mots en
 écoutant le morceau.
 
-Quelque part dans les Landes. Avril. Un coucher de soleil. Dans les dunes. Une
-vieille décapotable. Du vent dans les cheveux. Illusion de liberté. Bonheur. Le
-bout du chemin. Nuit. Forêt. Feu de bois. Contemplation. Pas besoin de mots.
+> Quelque part dans les Landes. Avril. Un coucher de soleil. Dans les dunes. Une
+> vieille décapotable. Du vent dans les cheveux. Illusion de liberté. Bonheur.
+>
+> Le bout du chemin. Nuit. Forêt. Feu de bois. Contemplation. Pas besoin de
+> mots.
 
 https://mentalgroove.bandcamp.com/track/stickerbrush-symphony-2
 
@@ -120,23 +122,30 @@ https://singasongfighter.bandcamp.com/track/fj-llglim
 Je laisse Jules, notre grand poète, nous décrire ce beau morceau qui me fait
 monter les larmes aux yeux à chaque écoute :
 
-Je m'allonge sur un canapé et je lance Medusa. Le bruit de la vie et de
-l'insouciance qui habite la maison que nous partageons me parvient à peine à
-travers mon casque. Les rayons du soleil à son zénith passent à travers la
-fenêtre et terminent leur course sur mes petons. J'ai eu froid hier. Une basse
-lente mais puissante posée sur une nappe sonore légère arrive jusqu'à mes
-oreilles. Un instant, j'oublie les tracas de la vie et de la météo. Je me laisse
-porter par l'ambiance aérienne du morceau. Le duo de voix noyé de reverb, comme
-un phare dans la nuit, me berce et m'emporte. Les guitares, mélodiques et
-pleines d'espoirs, comme une promesse qu'après l'hiver viendra le printemps, que
-les écharpes et les pulls laisseront place à la peau nue et aux dîners sur la
-plage. Je prête peu d'attention aux paroles mais me laisse surprendre par un
-rebond électrique qui brise la structure linéaire du morceau. L'énergie et
-l'espace ample apporté par les effets aériens qui enveloppent les instruments me
-renvoie aux titres de WU LYF, le sauvage en moins, le soleil en plus. Medusa se
-termine. Je rouvre les yeux. MONTAÑITA. 13 abonnés, quelques centaines
-d'écoutes. Ça c'est mon Guillaume. Je me relève. J'ai envie d'une bonne quille
-de vin rouge. 
+> Je m'allonge sur un canapé et je lance Medusa. Le bruit de la vie et de
+> l'insouciance qui habite la maison que nous partageons me parvient à peine à
+> travers mon casque.
+>
+> Les rayons du soleil à son zénith passent à travers la fenêtre et terminent
+> leur course sur mes petons. J'ai eu froid hier. Une basse lente mais puissante
+> posée sur une nappe sonore légère arrive jusqu'à mes oreilles. Un instant,
+> j'oublie les tracas de la vie et de la météo. Je me laisse porter par
+> l'ambiance aérienne du morceau.
+>
+> Le duo de voix noyé de reverb, comme un phare dans la nuit, me berce et
+> m'emporte. Les guitares, mélodiques et pleines d'espoirs, comme une promesse
+> qu'après l'hiver viendra le printemps, que les écharpes et les pulls
+> laisseront place à la peau nue et aux dîners sur la plage. Je prête peu
+> d'attention aux paroles mais me laisse surprendre par un rebond électrique qui
+> brise la structure linéaire du morceau.
+>
+> L'énergie et l'espace ample apporté par les effets aériens qui enveloppent les
+> instruments me renvoie aux titres de WU LYF, le sauvage en moins, le soleil en
+> plus. Medusa se termine. Je rouvre les yeux.
+>
+> MONTAÑITA. 13 abonnés, quelques centaines d'écoutes. Ça c'est mon Guillaume.
+>
+> Je me relève. J'ai envie d'une bonne quille de vin rouge. 
 
 https://www.youtube.com/watch?v=QDhhoLYE9FQ
 
@@ -228,7 +237,11 @@ imagé.
 Heureusement Jules, tombé amoureux des synthés, nous permettra de clôturer `cmd`
 sur un haiku.
 
-Synthé d'une époque La melancolie ambiante Step by step by step
+> Synthé d'une époque
+>
+> La melancolie ambiante
+>
+> Step by step by step
 
 https://www.youtube.com/watch?v=pqKjFj6YoWM
 
