--- a/blog/_posts/2022-05-20-cmd-48.mdx
+++ b/blog/_posts/2022-05-20-cmd-48.mdx
@@ -7,7 +7,7 @@ export const metadata = Metadata.createCmd({
   title: 'cmd #48',
   image: {
     src: '/images/cmd-48.png',
-    alt: "Une photo ratée qui ne montre qu'un flou marron"
+    alt: "Une photo ratée qui ne montre qu'un flou marron",
     caption: "j'ai visiblement tenté de prendre une photo hier soir",
   }
 })
