--- a/blog/_posts/2022-05-27-cmd-49.mdx
+++ b/blog/_posts/2022-05-27-cmd-49.mdx
@@ -30,7 +30,7 @@ virant vers la Techno de l'autre. Voilà le programme.
 ### Chanson -  BO : Les Triplettes De Belleville (2003)
 
 FIP tard le soir est souvent un monde à part, surtout le dimanche, et je suis
-fasciné du talent de des programmateurs et programmatrices qui prépare ce qu'on
+fasciné du talent de des programmateurs et programmatrices qui préparent ce qu'on
 écoute à ces heures là.
 
 Beau métier qui doit nécessiter beaucoup d'heures de recherche et une sacré
@@ -38,9 +38,10 @@ mémoire, ou une sacré méthode de classification pour s'y retrouver dans toute
 ces petites pépites éclectiques dénichées à longueur de journée.
 
 Il fallait le trouver ce "Tour de France", et trouver aussi l'occasion et la
-façon de le passer à 23h30 le dimanche.
+façon de le passer à 23h30 un dimanche.
 
-> Pédalage et défonçage sont les mamelles du Tour de France alors ils se défoncent car la ligne est encore loin
+> Pédalage et défonçage sont les mamelles du Tour de France <br/>
+> alors ils se défoncent car la ligne est encore loin
 
 https://www.youtube.com/watch?v=ha7bRPuZpJo
 
@@ -92,10 +93,10 @@ https://www.youtube.com/watch?v=rjFt6H6uOQU
 Il fallait le dénicher ce "ผมไม่วุ่น", à prononcer "poune may voun" (je vous
 épargne le nom de l'album). C'est Marie-Paule, de l'équipe de la radio du mardi
 matin, qui s'en est chargée et qui nous a offert cette petite pépite de musique
-Thai Pop.
+Thaï Pop.
 
 Il faut s'avouer une chose : ce morceau est irresistible. Cette vibe funky, les
-paroles, l'ambiance nonchalante. À ce demander pourquoi je n'ai pas fait Thai
+paroles, l'ambiance nonchalante. À ce demander pourquoi je n'ai pas fait thaï
 LV2 au lycée.
 
 https://www.youtube.com/watch?v=EFDDeQa33Wg
@@ -106,10 +107,10 @@ https://www.youtube.com/watch?v=EFDDeQa33Wg
 
 ### New Wave - Album : Ideal (1980)
 
-Changement flagrant de décors en s'avançant de 2 années après The Impossibles.
+Changement flagrant de décors en s'avançant de 2 années dans l'histoire.
 Nous voilà arrivé sur de la New Wave originelle bien creusée, un peu crasse. On
 devine encore le Punk qui traine derrière. Le rythme lent apporte un caractère
-bien particulier au morceau, l'autorisant à doubler le tempo en fin de morceau,
+bien particulier au morceau, l'autorisant à doubler le tempo à la toute fin ,
 une fois le refrain démarré et accompagné de cette petit mélodie planante
 typique de l'époque.
 
@@ -130,7 +131,7 @@ et Techno qui manque à mes yeux de cohérence.
 Ça ne nous empêche pas d'y trouver de jolis petits track comme ce Skin, au
 parfum Techno qui ne tabasse pas trop. Fort potentiel de remix.
 
-C'est local, c'est de Saint Nazaire, c'est Maud Geffray.
+C'est de Saint Nazaire, c'est local, , c'est Maud Geffray.
 
 https://maudgeffray.bandcamp.com/track/skin
 
@@ -205,7 +206,7 @@ connaissez peut-être à Paris (10 et 19) ou à Nice. Il y a généralement un g
 néon "Amour" attaché dessus, on les loupe pas.
 
 L'histoire d'une rupture, si je comprends bien le texte "Oublie moi doucement /
-Parle moi de temps en temps" ? Vous vous en ferrez votre propre idée.
+Parle moi de temps en temps" ? Vous vous en ferez votre propre idée.
 
 https://www.youtube.com/watch?v=V2-tJgu7C64
 
