--- a/blog/_posts/2022-05-27-cmd-49.mdx
+++ b/blog/_posts/2022-05-27-cmd-49.mdx
@@ -111,7 +111,7 @@ Changement flagrant de décors en s'avançant de 2 années dans l'histoire.
 Nous voilà arrivé sur de la New Wave originelle bien creusée, un peu crasse. On
 devine encore le Punk qui traine derrière. Le rythme lent apporte un caractère
 bien particulier au morceau, l'autorisant à doubler le tempo à la toute fin ,
-une fois le refrain démarré et accompagné de cette petit mélodie planante
+une fois le refrain démarré et accompagné de cette petite mélodie planante
 typique de l'époque.
 
 C'est allemand, forcément.
