--- a/blog/_posts/2022-06-03-cmd-50.mdx
+++ b/blog/_posts/2022-06-03-cmd-50.mdx
@@ -13,14 +13,14 @@ export const metadata = Metadata.createCmd({
 })
 
 
-`cmd` numéro 50. Un an, bientôt, un rythme d'une dizaine de morceaux par
-semaine. Ça semble si loin, pourtant. La ligne musicale a fort changée en 12
-mois ici. Pourquoi ? Aucune idée.
+`cmd` numéro 50. Un an, bientôt, au rythme d'une dizaine de morceaux par
+semaine. Un an et cela semble si loin. La ligne musicale a fort changée en 12
+mois ici, il faut se l'avouer. Pourquoi ? Aucune idée.
 
 Et comme si il fallait un contre-pied à cette dernière affirmation, le programme
-du jours sera plus énervé que d'habitude. On notera un sursaut de House et autre
-Italo Disco cette semaine. Pas d'inquiétude, cela s'équilibre (j'espère) avec ce
-qu'il faut de Jazz, Pop et autres.
+du jours sera plus énervé que ces dernières semaines. On notera un sursaut de
+House et autre Italo Disco cette semaine. Pas d'inquiétude, cela s'équilibre
+(j'espère) avec ce qu'il faut de Jazz, Pop et autres.
 
 
 
@@ -91,8 +91,8 @@ français Poni Hoax. Un genre de groupe culte que personne ne connait. Voilà un
 an et Pan European Recording, la maison de disque, libère cet inédit,
 magnifiquement triste.
 
-> – Dis papa, tu as déjà prévu ta setlist pour l’enterrement ?
-– Oui mon fils, ça s’appelle La mémoire perdue à nouveau.
+> – Dis papa, tu as déjà prévu ta setlist pour l’enterrement ? <br/>
+> – Oui mon fils, ça s’appelle La mémoire perdue à nouveau.
 
 
 
@@ -155,7 +155,8 @@ Chaque mois apprécier encore un peu plus l'artiste et sa musique. Je la range
 dans ma catégorie "musique pour lecteur et lectrices de Télérama" avec Belin et
 les autres.
 
-> On a pris l'habitude D'être plus qu'un passe-temps
+> On a pris l'habitude <br/>
+> D'être plus qu'un passe-temps <br/>
 
 https://www.youtube.com/watch?v=RqmOvSNfKOM
 
@@ -187,9 +188,10 @@ Pop (easy life) et Hip Hop (le featuring avec Kevin Abstract) qui est très
 réussi. Une chanson d'amour, pour changer, qui annonce un nouvel album pour la
 fin de l'été.
 
-> maybe in another life,
-we could try and roll the dice and get it right. ‘cause when there’s no-one else
-in sight, can’t help but think that we might get it right.
+> maybe in another life, <br/>
+> we could try and roll the dice and get it right. <br/>
+> ‘cause when there’s no-one else <br/>
+> in sight, can’t help but think that we might get it right. <br/>
 
 https://www.youtube.com/watch?v=nhNvl8sM8KY
 
