--- a/blog/_posts/2022-06-03-cmd-50.mdx
+++ b/blog/_posts/2022-06-03-cmd-50.mdx
@@ -7,8 +7,8 @@ export const metadata = Metadata.createCmd({
   title: 'cmd #50',
   image: {
     src: '/images/cmd-50.png',
-    alt: "Une photo ratée qui ne montre qu'un flou dégradé",
-    caption: "encore une photo mystère un soir cette semaine",
+    alt: "Photo d'une passiflore",
+    caption: "fleur magique chez les parents",
   }
 })
 
