--- a/blog/_posts/2022-06-03-cmd-50.mdx
+++ b/blog/_posts/2022-06-03-cmd-50.mdx
@@ -19,8 +19,8 @@ mois ici, il faut se l'avouer. Pourquoi ? Aucune idée.
 
 Et comme si il fallait un contre-pied à cette dernière affirmation, le programme
 du jours sera plus énervé que ces dernières semaines. On notera un sursaut de
-House et autre Italo Disco cette semaine. Pas d'inquiétude, cela s'équilibre
-(j'espère) avec ce qu'il faut de Jazz, Pop et autres.
+House et autre Italo Disco. Pas d'inquiétude, cela s'équilibre (j'espère) avec
+ce qu'il faut de Jazz, Pop et autres.
 
 
 
