--- a/blog/_posts/2022-06-03-cmd-50.mdx
+++ b/blog/_posts/2022-06-03-cmd-50.mdx
@@ -45,7 +45,7 @@ https://deliteliofficial.bandcamp.com/track/boumpam
 ### Jazz / Experimental (2022)
 
 J'ai découvert Nine Inch Nails à travers cette reprise étonnante de leur morceau
-"Copy of A", réalisé par Vincent Peirani et son trio formé avec le batteur
+"Copy of A", réalisée par Vincent Peirani et son trio formé avec le batteur
 israélien Ziv Ravitz et le guitariste italien Federico Casagrande.
 
 On aime particulièrement cette rythme porteuse d'angoisse, ambiance course
