--- a/blog/_posts/2022-06-03-cmd-50.mdx
+++ b/blog/_posts/2022-06-03-cmd-50.mdx
@@ -48,7 +48,7 @@ J'ai découvert Nine Inch Nails à travers cette reprise étonnante de leur morc
 "Copy of A", réalisée par Vincent Peirani et son trio formé avec le batteur
 israélien Ziv Ravitz et le guitariste italien Federico Casagrande.
 
-On aime particulièrement cette rythme porteuse d'angoisse, ambiance course
+On aime particulièrement cette rythmique porteuse d'angoisse, ambiance course
 poursuite dans un labyrinthe et ces refrains qui sonnent comme de rares moments
 de délivrance.
 
