--- a/blog/_posts/2022-06-10-cmd-51.mdx
+++ b/blog/_posts/2022-06-10-cmd-51.mdx
@@ -110,10 +110,13 @@ Il y avait du easy life dans le [dernier
 Je suis allé écouter un album ou deux pour les entendre à nouveau aujourd'hui et
 voilà ce sur quoi je suis tombé. Un morceau beau mais triste.
 
-> I've got something
-And there's always something wrong If it's HD, it's too graphic for me Dumb down
-this realness, leave me feeling Nothing Even if there's nothing wrong And
-Sundays, with no dopamine There's no happiness hanging beside me
+> I've got something <br/>
+> And there's always something wrong  <br/>
+> If it's HD, it's too graphic for me Dumb down <br/>
+> this realness, leave me feeling  <br/>
+> Nothing Even if there's nothing wrong And  <br/>
+> Sundays, with no dopamine  <br/>
+> There's no happiness hanging beside me  <br/>
 
 https://www.youtube.com/watch?v=ruBmzJ2uLw0
 
