--- a/blog/_posts/2022-06-16-cmd-52.mdx
+++ b/blog/_posts/2022-06-16-cmd-52.mdx
@@ -23,7 +23,7 @@ Moi qui voulait trouver "juste un petit projet" me voilà une fois de plus à
 semaine. On se permettra peut-être de faire une pause cet été. Ou plus tard. On
 verra bien.
 
-Programme du jour : éclectique
+Programme du jour : éclectique.
 
 
 
@@ -54,8 +54,7 @@ morceaux de Reggae alternatif et grenoblois, nous déniche cette collab
 improbable : 2Pac et Sade, pour un morceau Hip Hop aux accents planants et Soul.
 Le mélange est réussi.
 
-https://www.youtube.com/watch?v=azwzZIZHXzk
-
+https://www.youtube.com/watch?v=I1yHc7AZ93I
 
 
 
