--- a/blog/_posts/2022-06-16-cmd-52.mdx
+++ b/blog/_posts/2022-06-16-cmd-52.mdx
@@ -107,9 +107,9 @@ Rien de nouveau ici, un classique léger que vous connaissez probablement. Il y 
 bien assez de belles chansons tristes qui prennent la tête parfois pour ne pas
 profiter de ce blues au parfum hippies.
 
-> I'm going, I'm going Where the water tastes like wine
-> I'm going where the water tastes like wine
-> We can jump in the water, stay drunk all the time
+> I'm going, I'm going Where the water tastes like wine <br/>
+> I'm going where the water tastes like wine<br/>
+> We can jump in the water, stay drunk all the time<br/>
 
 Il y a comme un thème caché dans ce `cmd`.
 
