--- a/blog/_posts/2022-07-01-cmd-54.mdx
+++ b/blog/_posts/2022-07-01-cmd-54.mdx
@@ -70,8 +70,7 @@ Je ne m'en suis toujours pas complètement remis mais je compte bien vous en
 faire profiter tout de même. Perdu dans mes recherches, je tombe sur cette
 Synth Pop très punchy de ABC pour "Tower of London". À écouter bien fort.
 
-https://www.youtube.com/watch?v=KdHuUgQJW0c__
-
+https://www.youtube.com/watch?v=YxLwnQmWA2g
 
 
 ## Rote - Sun In The Night
@@ -149,7 +148,7 @@ sonore pour vos apéros d'été. De beaux morceaux. Du récent, du moins récent
 local, du moins local.
 
 J'y ai piqué "Oh Id" des lyonnais de Fontanarosa (entre autres). Une jolie Pop
-Rock sans prise de tête. __We are foreigners.__
+Rock sans prise de tête. _We are foreigners._
 
 https://fontanarosa.bandcamp.com/track/oh-id?utm_source=pocket_mylist
 
@@ -166,7 +165,7 @@ Ce qui fonctionne bien sur ce morceau c'est la double base Breakbeat sur
 laquelle vient se poser une narration au synthé assez minimaliste. Et puis
 avons-le, il y a "cmd" dans le nom : j'étais forcé d'inclure le morceau ici.
 
-https://principlesofgeometry.bandcamp.com/album/cmd-ctrl?f
+https://principlesofgeometry.bandcamp.com/track/cmd-ctrl
 
 
 
