--- a/blog/_posts/2022-07-15-cmd-56.mdx
+++ b/blog/_posts/2022-07-15-cmd-56.mdx
@@ -140,9 +140,11 @@ qu'il y a des bruits de Minitel au milieu. On en perd son tempo. Gros point
 positif pour le texte repris plus ou moins en entier par dessus la ritournelle
 "And the heat goes on" en Outro. Deux morceaux en un, rentabilité maximale.
 
-> All I want is to breathe (I'm too thin)
-Won't you breathe with me? Find a little space so we move in-between (In-between
-it) And keep one step ahead of yourself
+> All I want is to breathe (I'm too thin)<br/>
+> Won't you breathe with me?<br/>
+> Find a little space so we move in-<br/>
+> between (In-between it)<br/>
+> And keep one step ahead of yourself
 
 https://www.youtube.com/watch?v=w6T_X7MXg40
 
