--- a/blog/_posts/2022-07-29-cmd-58.mdx
+++ b/blog/_posts/2022-07-29-cmd-58.mdx
@@ -195,7 +195,7 @@ https://dbridge.bandcamp.com/track/what-once-was
 
 Parce que ça manquait un peu de Rock aujourd'hui, je nous ai trouvé un super
 track de fin.C'est grâce au collègue Damien qui m'avait conseillé d'aller voir
-les lyonnais de Last Train aux Vielles Charrues. Finalement je les ai loupé sur
+les alsaciens de Last Train aux Vielles Charrues. Finalement je les ai loupé sur
 place. Bravo Guillaume. Mais je me suis rattrapé cette semaine en écoutant leur
 album The Big Picture. C'est mieux que rien.
 
