--- a/blog/_posts/2022-08-05-cmd-59.mdx
+++ b/blog/_posts/2022-08-05-cmd-59.mdx
@@ -68,7 +68,7 @@ sous les pieds et les incertitudes d'un monde sous pilote auto buggé.
 
 Si vous aussi cela peut vous faire du bien, aller voir du côté de l'album de
 collaboration entre Cluster et Brian Eno, sobrement intitulé "[Cluster &
-Eno](https://open.spotify.com/album/0VSmGsL1RtyjE7bdAaSAvy)" (il ne mfaut pas
+Eno](https://open.spotify.com/album/0VSmGsL1RtyjE7bdAaSAvy)" (il ne faut pas
 trop demander à des producteurs d'Ambient). C'est très bien.
 
 https://www.youtube.com/watch?v=q5mwB0LcfzY
