--- a/blog/_posts/2022-06-03-cmd-50.mdx
+++ b/blog/_posts/2022-06-03-cmd-50.mdx
@@ -85,7 +85,7 @@ En parlant de prendre son temps, en voilà un autre exemple. "La mémoire perdue
 nouveau" et ses 10 minutes de paroles plaquées comme les personnes talentueuses
 improvisent ces discours qui accorchent.
 
-Ce qui accrochent là aussi, c'est que cette mémoire perdue nous arrive posthume.
+Ce qui accroche là aussi, c'est que cette mémoire perdue nous arrive posthume.
 Il y a un an mourrait son propriétaire, Nicolas Ker, chanteur du groupe de rock
 français Poni Hoax. Un genre de groupe culte que personne ne connait. Voilà un
 an et Pan European Recording, la maison de disque, libère cet inédit,
