--- a/blog/_posts/2022-08-12-cmd-60.mdx
+++ b/blog/_posts/2022-08-12-cmd-60.mdx
@@ -13,7 +13,7 @@ export const metadata = Metadata.createCmd({
 })
 
 Alerte orange trop chaud. Ça commence à bien faire. Heureusement la musique
-s'écoute part toute température. Je dirais même qu'il n'y a que ça à faire
+s'écoute par toute température. Je dirais même qu'il n'y a que ça à faire
 quand on est plaqué dans la chaleur de partout.
 
 Programme du jour : un beau mélange. Du calme surtout, mais sous toute ses
