--- a/blog/_posts/2022-08-19-cmd-61.mdx
+++ b/blog/_posts/2022-08-19-cmd-61.mdx
@@ -13,12 +13,12 @@ export const metadata = Metadata.createCmd({
 })
 
 Semaine super chargée au boulot, ce qui n'est pas très habituel pour un 15
-août. On a profité de la période de l'été pour inviter une partie de mes
-collègues proches à Nantes et se transformer en guide touristique. C'était
+août. On a profité de la période de l'été pour inviter une partie de nos
+collègues proches à Nantes et se transformer en guides touristiques. C'était
 bien.
 
 Néanmoins rien n'arrête `cmd` et nous voilà avec l'édition 61. Au programme un
-mélange des genre : Jazz, Hip Hop, Soul, Funk, Rock, Experimental, Ambient.
+mélange des genres : Jazz, Hip Hop, Soul, Funk, Rock, Experimental, Ambient.
 Zou.
 
 
