--- a/blog/_posts/2022-08-19-cmd-61.mdx
+++ b/blog/_posts/2022-08-19-cmd-61.mdx
@@ -54,7 +54,8 @@ pourtant jamais fait son entrée dans ma petite discographie. Grossière erreur.
 
 "Let Love Flow On" ou le morceau qui reste en tête mais pour le mieux.
 
-> We'll do the things together only lovers do<br /> Let love flow on baby<br />
+> We'll do the things together only lovers do<br />
+> Let love flow on baby<br />
 
 https://www.youtube.com/watch?v=yOzmyOaDhJ4
 
@@ -65,7 +66,7 @@ https://www.youtube.com/watch?v=yOzmyOaDhJ4
 ### Rock / Hip Hop - EP :  25th St Sessions (2016)
 
 Très belle collaboration entre le rappeur antonio williams (qu'on connait
-visiblement plutôt comme Antwon) et guitariste Kerry McCoy que ce "Changes".
+visiblement plutôt comme Antwon) et le guitariste Kerry McCoy que ce "Changes".
 Très beau mélange des genres entre Hip Hop et Rock. On détecterait presque un
 élan Punk.
 
@@ -98,8 +99,7 @@ du vocal. Classique mais très fonctionnel, l'arrangement est impeccable, vous
 verrez.
 
 Et puis, le message va droit au coeur. "Too Sensitive For This World", voilà
-quelque chose qui parle de soi, un peu. C'est toujours touchant qu'on on entend
-parler de soi.
+quelque chose qui parle de soi, un peu. C'est toujours touchant.
 
 > Ev'ry day starts with a broken heart<br />
 > I must be too sensitive for this world<br />
@@ -123,7 +123,7 @@ couché et avec une pluie un peu énervée dehors.
 
 Un extrait ici avec "The Failure of Stiff, Tired Friends", mon morceau préféré.
 Une belle balade mélancolique. Une rythmique répétitive, quelques très beaux
-beep boop électroniques qui se promène d'un côté et de l'autre de la tête puis
+beep boop électroniques qui se promènent d'un côté et de l'autre de la tête puis
 une guitare de western magnifique. Dans le clip, un chien.
 
 https://www.youtube.com/watch?v=3J6ZHal9D04
@@ -135,7 +135,7 @@ https://www.youtube.com/watch?v=3J6ZHal9D04
 ### Experimental / Ambient - Album : I Survived, It's Over (2022)
 
 Le coup de coeur de la semaine. Ce "Doxology" est surprenant car s'éloignant
-vraiment de l'Électronique. Il n'y a qu'à écouter le début et cette ritournelle
+vraiment de l'Électro. Il n'y a qu'à écouter le début et cette ritournelle
 avec cet instrument à corde - peut-être un banjo - qui crée un côté très
 scénique.
 
@@ -152,8 +152,8 @@ https://richruth.bandcamp.com/track/doxology?utm_source=pocket_mylist
 ### Krautrock / Ambient - Album : Beat (1996)
 
 Du Krautrock encore ! Qu'est-ce que je vous disais. C'est les américains
-derrière Bowery Electric qui nous propose cette pièce assez planante, ce qui me
-permet de la catégorisée comme Ambient.
+derrière Bowery Electric qui nous proposent cette pièce assez planante, ce qui
+me permet de la catégorisée comme Ambient.
 
 Je pense avoir découvert le gros via [Flow State](https://www.flowstate.fm/),
 une newsletter qui vous amène une petite dose Ambient une fois par jour. C'est
@@ -165,8 +165,7 @@ https://boweryelectric.bandcamp.com/track/inside-out?utm_source=pocket_mylist
 
 ## Hamid El Shaeri - Reet
 
-### Folk / Funk - Compilation : Habibi Funk 015 : An Eclectic Selection Of
-Music From The Arab World, Part 2 (2021)
+### Folk / Funk - Compilation : Habibi Funk 015 : An Eclectic Selection Of Music From The Arab World, Part 2 (2021)
 
 La [semaine dernière](https://cmd.wuips.com/post/2022-08-12-cmd-60) nous
 écoutions Ferkat Al Ard et son beau mélange des styles arabes, Jazz, Folk et
