--- a/blog/_posts/2022-08-26-cmd-62.mdx
+++ b/blog/_posts/2022-08-26-cmd-62.mdx
@@ -31,7 +31,7 @@ de Punk. C'est parti !
 On commence facile avec un artiste valeur sûre. Choisir Damon Albarn c'est être
 assuré•e de choisir un beau morceau.
 
-Le gaillard est un peu __workaholic__. Vous le connaissez sûrement derrière
+Le gaillard est un peu _workaholic_. Vous le connaissez sûrement derrière
 Gorillaz. Vous le retrouvez aussi avec Blur (son premier groupe !) ou en solo
 aux quatre coins du monde quand il n'est pas réfugié dans sa maison en Islande.
 
