--- a/blog/_posts/2022-09-02-cmd-63.mdx
+++ b/blog/_posts/2022-09-02-cmd-63.mdx
@@ -59,7 +59,7 @@ https://shyone.bandcamp.com/track/bird-bop
 ### Funk - Album : My First Car (2017)
 
 Vous avez là un morceau Funk incroyable, vous êtes prévenu•e•s. Tout pétille
-dans les oreilles : les lignes de synthés, la basses qui donne des frissons, la
+dans les oreilles : les lignes de synthés, la basse qui donne des frissons, la
 rythmique qui porte le tout. Ce que j'aime particulièrement dans la construction
 du morceau : c'est deux passages comme des ponts qui créent ces moments
 suspendus.
