--- a/blog/_posts/2022-09-02-cmd-63.mdx
+++ b/blog/_posts/2022-09-02-cmd-63.mdx
@@ -14,7 +14,7 @@ export const metadata = Metadata.createCmd({
 
 Nous sommes vendredi et voici le `cmd` édition numéro 63. Au programme du jour
 de l'éclectisme (un peu), de l'hétéroclite (forcément), de l'amour (toujours).
-Italdo Disco, Breakbeat, Funk, Indie Rock et Pop, Rap, Ambient : il y en a pour
+Italo Disco, Breakbeat, Funk, Indie Rock et Pop, Rap, Ambient : il y en a pour
 tout les goûts et j'espère que tout cela s'emboite bien.
 
 
