--- a/blog/_posts/2022-09-09-cmd-64.mdx
+++ b/blog/_posts/2022-09-09-cmd-64.mdx
@@ -143,7 +143,7 @@ https://hiroshiyoshimura.bandcamp.com/track/dance-pm?utm_source=pocket_mylist
 Le coup de coeur de la semaine, enfin le deuxième (il n'y a pas de limite en
 nombre de coups de coeur, sur `cmd`). "Strangers" suit la recette des morceaux
 de fin d'histoires, ceux là qu'on utilisent pour les plans larges de fin de road
-movies, pour les vacances qui se termine, pour les soleils qui se couchent.
+movies, pour les vacances qui se terminent, pour les soleils qui se couchent.
 
 Le morceau irresistible avec cette ligne de basse structurante et cette guitare
 envoyée très loin en reverb.
