--- a/blog/_posts/2022-09-16-cmd-65.mdx
+++ b/blog/_posts/2022-09-16-cmd-65.mdx
@@ -38,8 +38,7 @@ https://www.youtube.com/watch?v=ZFp2CQ4VVqQ
 
 ## Sven Libaek - The Set
 
-### Jazz - Compilation : Inner Space (The Lost Film Music Of Sven Libaek)
-(2006)
+### Jazz - Compilation : Inner Space (The Lost Film Music Of Sven Libaek) (2006)
 
 Avec l'expérience, on reconnait les musiques de film assez bien à l'oreille. Je
 ne sais pas pourquoi. Peut-être leur manque-t-il un quelque chose pour le voir
