--- a/blog/_posts/2022-09-30-cmd-67.mdx
+++ b/blog/_posts/2022-09-30-cmd-67.mdx
@@ -30,7 +30,7 @@ Indie Rock, Techno mais Techno calme. Un `cmd` rompiche.
 ### Jazz - BO : Svezia, Inferno E Paradiso (1968)
 
 J'ai au travail un collègue, Pedro, qui est tombé dans le trou noir de la vielle
-musique film italienne - difficile d'en sortir indemne. Sur le chemin il me
+musique de film italienne - difficile d'en sortir indemne. Sur le chemin il me
 partage quelques petites pépites glanées par-ci par-là au fond des internets.
 Ambiance 60s - 70s garantie et petit parfum du flegme des films d'époque.
 Exemple ici avec "Topless Party" qui tombe à pic pour ouvrir `cmd`.
