--- a/blog/_posts/2022-11-04-cmd-72.mdx
+++ b/blog/_posts/2022-11-04-cmd-72.mdx
@@ -53,7 +53,7 @@ Au milieu de la soirée, l'instant "Goodbye Stranger" donc, où la culture local
 veut que tout le monde se mette à danser bizarrement à travers l'appart en
 s'échangeant des chapeaux. C'était très chouette.
 
-Goodbye Stranger, mais revient vite.
+Goodbye Stranger, mais reviens vite.
 
 https://www.youtube.com/watch?v=c6X73UUREAM
 
