--- a/blog/_posts/2022-10-21-cmd-70.mdx
+++ b/blog/_posts/2022-10-21-cmd-70.mdx
@@ -22,7 +22,7 @@ tisane, un plaid et un canapé moelleux. Relax : c'est `cmd`.
 
 
 
-## Minimi Deutsch - Still Foggy
+## Minami Deutsch - Still Foggy
 
 ### Krautrock / Ambient - Album : Fortune Goodies (2022)
 
